src/tess/tl/test/fail/test_fail_lambda_return_annotation_mismatch.tl
#module main

main() {
    f := (x: Int) -> String { x + 1 }
    f(1)
    0
}
